--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 # misc
 .DS_Store
 *.pem
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
 
 # debug
 npm-debug.log*
