--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
     "apollo-server-micro": "^3.13.0",
+    "autoprefixer": "^10.4.19",
+    "graphql": "^16.8.1",
+    "mongodb": "^6.5.0",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.3.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
